# agents_sample

./: Agent frameworks.txt  Agentic_AI_Framework_Comparison.md  Chat_lang.py  Comparison.md  Makefile  Mem.txt  Memory in Agentic Frameworks.txt  Pyv2.py  README.md  memory-comparison.md  memoryopenai.md  new memory.md  new memory.txt  pyproject.toml  user.md
apps/claude_agent_sdk/: main.py
apps/crewai/: main.py
apps/langchain/: main.py
apps/langgraph/: main.py
docs/: architecture.md
src/hilo_eda/: __init__.py  cli.py  config.py  discovery.py  human.py  inference.py  models.py  orchestrator.py  profiling.py  report.py  snowflake.py  sql_safety.py
tests/: test_inference.py  test_sql_safety.py
